src/logs/error/2022-11-30.log
2022-11-30 13:30:13 error: [POST] /login >> StatusCode:: 409, Message:: This email anthibo@test.com was not found
2022-11-30 14:32:57 error: uncaughtException: Class constructor FeatureRoute cannot be invoked without 'new'
TypeError: Class constructor FeatureRoute cannot be invoked without 'new'
    at Object.<anonymous> (/home/anthibo/Projects/growthbook-demo/src/server.ts:10:87)
    at Module._compile (node:internal/modules/cjs/loader:1155:14)
    at Module.m._compile (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1618:23)
    at Module._extensions..js (node:internal/modules/cjs/loader:1209:10)
    at Object.require.extensions.<computed> [as .ts] (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1033:32)
    at Function.Module._load (node:internal/modules/cjs/loader:868:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12)
    at phase4 (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/bin.ts:649:14)
    at bootstrap (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/bin.ts:95:10)
2022-11-30 18:16:40 error: uncaughtException: тип Unable to compile TypeScript:
[96msrc/controllers/feature.controller.ts[0m:[93m33[0m:[93m13[0m - [91merror[0m[90m TS1003: [0mIdentifier expected.

[7m33[0m       if(gb.)
[7m  [0m [91m            ~[0m

TSError: тип Unable to compile TypeScript:
[96msrc/controllers/feature.controller.ts[0m:[93m33[0m:[93m13[0m - [91merror[0m[90m TS1003: [0mIdentifier expected.

[7m33[0m       if(gb.)
[7m  [0m [91m            ~[0m

    at createTSError (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:863:19)
    at /home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1379:34
    at Object.compile (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1458:13)
    at Module.m._compile (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1209:10)
    at Object.require.extensions.<computed> [as .ts] (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1033:32)
    at Function.Module._load (node:internal/modules/cjs/loader:868:12)
    at Module.require (node:internal/modules/cjs/loader:1057:19)
2022-11-30 18:23:11 error: uncaughtException: тип Unable to compile TypeScript:
[96msrc/controllers/feature.controller.ts[0m:[93m13[0m:[93m13[0m - [91merror[0m[90m TS1003: [0mIdentifier expected.

[7m13[0m       if(gb.)
[7m  [0m [91m            ~[0m

TSError: тип Unable to compile TypeScript:
[96msrc/controllers/feature.controller.ts[0m:[93m13[0m:[93m13[0m - [91merror[0m[90m TS1003: [0mIdentifier expected.

[7m13[0m       if(gb.)
[7m  [0m [91m            ~[0m

    at createTSError (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:863:19)
    at /home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1379:34
    at Object.compile (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1458:13)
    at Module.m._compile (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1209:10)
    at Object.require.extensions.<computed> [as .ts] (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1033:32)
    at Function.Module._load (node:internal/modules/cjs/loader:868:12)
    at Module.require (node:internal/modules/cjs/loader:1057:19)
2022-11-30 18:23:22 error: uncaughtException: Unexpected token 'const'
/home/anthibo/Projects/growthbook-demo/src/controllers/feature.controller.ts:12
                    const result = await this.featureService.doFeature1();
                    ^^^^^

SyntaxError: Unexpected token 'const'
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1084:15)
    at Module._compile (node:internal/modules/cjs/loader:1119:27)
    at Module.m._compile (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1618:23)
    at Module._extensions..js (node:internal/modules/cjs/loader:1209:10)
    at Object.require.extensions.<computed> [as .ts] (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1033:32)
    at Function.Module._load (node:internal/modules/cjs/loader:868:12)
    at Module.require (node:internal/modules/cjs/loader:1057:19)
    at require (node:internal/modules/cjs/helpers:103:18)
2022-11-30 18:23:50 error: uncaughtException: тип Unable to compile TypeScript:
[96msrc/controllers/feature.controller.ts[0m:[93m13[0m:[93m46[0m - [91merror[0m[90m TS1005: [0m')' expected.

[7m13[0m       console.log(gb.evalFeature('feature-1');)
[7m  [0m [91m                                             ~[0m
[96msrc/controllers/feature.controller.ts[0m:[93m13[0m:[93m47[0m - [91merror[0m[90m TS1128: [0mDeclaration or statement expected.

[7m13[0m       console.log(gb.evalFeature('feature-1');)
[7m  [0m [91m                                              ~[0m

TSError: тип Unable to compile TypeScript:
[96msrc/controllers/feature.controller.ts[0m:[93m13[0m:[93m46[0m - [91merror[0m[90m TS1005: [0m')' expected.

[7m13[0m       console.log(gb.evalFeature('feature-1');)
[7m  [0m [91m                                             ~[0m
[96msrc/controllers/feature.controller.ts[0m:[93m13[0m:[93m47[0m - [91merror[0m[90m TS1128: [0mDeclaration or statement expected.

[7m13[0m       console.log(gb.evalFeature('feature-1');)
[7m  [0m [91m                                              ~[0m

    at createTSError (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:863:19)
    at /home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1379:34
    at Object.compile (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1458:13)
    at Module.m._compile (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1209:10)
    at Object.require.extensions.<computed> [as .ts] (/home/anthibo/Projects/growthbook-demo/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1033:32)
    at Function.Module._load (node:internal/modules/cjs/loader:868:12)
    at Module.require (node:internal/modules/cjs/loader:1057:19)
2022-11-30 18:58:21 error: [GET] /features/1 >> StatusCode:: 500, Message:: TypeError: Cannot read properties of undefined (reading 'id')
2022-11-30 19:34:26 error: [GET] /features/1 >> StatusCode:: 500, Message:: Cannot set headers after they are sent to the client
